--- a/build.xml
+++ b/build.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
 <project basedir="." default="build" name="ant-scripting">
-    <property file="hashlist.default_hashes"/>
 
     <taskdef resource="org/codehaus/groovy/antlib.xml">
         <classpath path="lib/groovy-all-2.4.4.jar"/>
@@ -9,13 +8,19 @@
 	<target name="hashlist">
 		<groovy>
             import org.apache.tools.ant.types.FileSet
+            import org.apache.tools.ant.DirectoryScanner
             import groovy.json.JsonBuilder
             import groovy.json.JsonOutput
 
             class Hashlist extends org.apache.tools.ant.Task {
                 String file
-                String fileset = "."
-                String checksums="md5, sha-1, sha-256"    
+                FileSet fileset
+                String checksums="md5, sha-1, sha-256" 
+
+                public void addFileset(FileSet fileset) {
+                    this.fileset = fileset
+                }
+ 
                 String fileToMd5( File aFile ) {
                     def antx = new AntBuilder();
                     antx.checksum( file: aFile.path, property: "result1" )
@@ -33,28 +38,32 @@
                     antx.checksum( file: aFile.path, algorithm:"SHA-256",  property: "result1" )
                     return antx.project.properties.result1;
                 }
+
+                def getCheckSums(File f) {
+                    def result = [:]
+                    if(checksums.contains("md5")) result["md5"] = fileToMd5(f)
+                    if(checksums.contains("sha-1")) result["sha-1"] = fileToSHA1(f)
+                    if(checksums.contains("sha-256")) result["sha-256"] = fileToSHA256(f)
+                    return result;
+                }
                 
                 public void execute() { 
                     def ant = new AntBuilder()
                     def builder = new groovy.json.JsonBuilder()
                     // let's create a scanner of filesets
-                    def scanner = ant.fileScanner {
-                        fileset(dir: fileset) 
-                    }
+                    DirectoryScanner ds  = fileset.getDirectoryScanner(project);
+
                     def root = builder {
-                       files scanner.collect { f -> 
+                       files ds.collect { f -> 
                        ["path":new File(fileset).toURI().relativize(new File(f.path).toURI()).getPath(),
                         "size":f.length(),
-                        "modified":new Date(f.lastModified()).format('yyyy-MM-dd hh:mm:ss'),
-                        "md5":fileToMd5(f), 
-                        "sha-1":fileToSHA1(f), 
-                        "sha-256":fileToSHA256(f)]}                       
+                        "modified":new Date(f.lastModified()).format('yyyy-MM-dd hh:mm:ss')
+                        +getCheckSums(f)]}                       
                     }
                     assert root instanceof Map
                     println (builder.toString())
                     def inputFile = new File(file)
                     inputFile.write(JsonOutput.prettyPrint(builder.toString()))
-                    getCheckSums()
                 }
             }
             
@@ -62,7 +71,10 @@
         </groovy>
 
         <echo>Second rectangle:</echo>
-        <hashlist file="zwiwo.json" fileset="."/>
+        <hashlist file="zad-zwiwo.json" checksums="md5,sha-256">
+            <fileset dir="." />
+        </hashlist>
+
 	</target>
 
 
